<resources>
    <string name="app_name">每日资讯</string>
    <string name="loading_now">正在刷新中…</string>
    <string name="loading_more">获取更多中…</string>
    <string name="click_reload">点击重新加载…</string>
    <string name="review">回顾</string>
    <string name="search_hint">搜索想要看的新闻</string>
    <string name="search_news">搜索</string>
    <string name="clear_all">清空历史</string>
    <string name="search_history">搜索历史</string>
    <string name="splash_ad">封面广告</string>
    <string name="dark_type">深色模式</string>
    <string name="light_type">浅色模式</string>
    <string name="follow_system">跟随系统</string>
    <string name="follow_system_tip">开启后，应用内夜间模式状态和系统保持一致</string>
    <string name="manual_choose">手动选择</string>
    <string name="check_update">检查更新</string>
    <string name="setting">设置</string>
    <string name="play_and_download">缓存视频</string>
    <string name="clean_cache">清除缓存</string>
    <string name="about_software">关于软件</string>
    <string name="album">专辑</string>
    <string name="news_tip">热点头条新闻抢先看</string>
    <string name="app_permission">权限列表</string>
    <string name="reply_and_help">反馈与帮助</string>
    <string name="third_data_list">第三方数据清单</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="user_policy">用户协议</string>
    <string name="title_activity_third_lib">ThirdLibActivity</string>
    <string name="location_now">定位中…</string>
    <string name="no_wifi_play">非WiFi环境播放视频</string>
    <string name="copyright_2023_news_all_rights_reserved">copyright 2023 News All Rights Reserved</string>
    <string name="function_introduce">功能介绍</string>
    <string name="complaint_or_reply">投诉与建议</string>
    <string name="open_source_more">github链接</string>
    <string name="_00_00">00:00</string>
    <string name="off">关闭</string>
    <string name="close">关闭</string>
    <string name="no_wifi_play_music">非WiFi环境播放音乐</string>
    <string name="allow_other_play">允许与其他应用同时播放</string>
    <string name="desktop_lrc">桌面歌词</string>
    <string name="loading_lrc">歌词加载中…</string>
    <string name="lrc_type">歌词模式</string>
    <string name="line_highligh">逐行高亮</string>
    <string name="word_highligh">逐字高亮(卡拉OK)</string>
    <string name="lossless">无损</string>
    <string name="mv">MV</string>
    <string name="vip">VIP</string>
    <string name="local_music">本地</string>
    <string name="download_music">已下载</string>
    <string name="live">直播</string>
    <string name="record">记录</string>
    <string name="recent_play">最近播放</string>
    <string name="played_music">已播歌曲</string>
    <string name="mine">我的</string>
    <string name="start_listen">开始识别</string>
    <string name="stop_listen">停止识别</string>
    <string name="listen_tip">外界安静，靠近音源，识别更准确</string>
    <string name="download">下载</string>
    <string name="music_operation">音乐操作</string>
    <string name="error_occurred">抱歉,程序出现异常</string>
    <string name="restart_app">重启程序</string>
    <string name="close_app">关闭程序</string>
    <string name="print_error_info">打印异常信息</string>
    <string name="error_tip">温馨提示:\n长按错误日志可复制</string>
    <string name="ring">铃声</string>
    <string name="call_ring">来电铃声</string>
    <string name="alarm_ring">闹钟铃声</string>
    <string name="notify_ring">通知铃声</string>
    <string name="singer">歌手</string>
    <string name="single">单曲</string>
    <string name="recommend_music">推荐音乐</string>
    <string name="jump">跳过</string>
</resources>