<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.AboutActivity">

    <com.android.wy.news.view.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="关于软件" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="80dp"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:text="@string/app_name"
            android:textColor="@color/main_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_version_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:textColor="@color/second_title"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="V1.0.1" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_introduce"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_common_press"
        android:gravity="center_vertical"
        android:paddingStart="6dp"
        android:paddingEnd="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/function_introduce"
            android:textColor="@color/main_title"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow"
            app:tint="@color/main_title" />
    </RelativeLayout>

    <View style="@style/dividerItemStyle" />

    <RelativeLayout
        android:id="@+id/rl_complaint"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_common_press"
        android:gravity="center_vertical"
        android:paddingStart="6dp"
        android:paddingEnd="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/complaint_or_reply"
            android:textColor="@color/main_title"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow"
            app:tint="@color/main_title" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="30dp"
        android:text="@string/copyright_2023_news_all_rights_reserved"
        android:textColor="@color/second_title"
        android:textSize="12sp" />

</LinearLayout>