<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.SkinActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:src="@mipmap/back"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/light_type"
            android:textColor="@color/main_title"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_item"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/follow_system"
            android:textColor="@color/main_title"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/follow_system_tip"
            android:textColor="@color/second_title"
            android:textSize="12sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_skin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:textOff="off"
            android:textOn="on"
            android:thumb="@drawable/switch_common_thumb"
            app:showText="true"
            app:splitTrack="false"
            app:switchMinWidth="60dp"
            app:switchPadding="6dp"
            app:switchTextAppearance="@style/switchText"
            app:track="@drawable/switch_common_track"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/manual_choose"
            android:textColor="@color/second_title"
            android:textSize="14sp" />


        <RelativeLayout
            android:id="@+id/rl_light"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_item"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/light_type"
                android:textColor="@color/main_title"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_light"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:src="@mipmap/check"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_item"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/dark_type"
                android:textColor="@color/main_title"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_dark"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:src="@mipmap/check"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>