<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_status_bar_color"
    android:fitsSystemWindows="true">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/mine"
                    android:textColor="@color/main_title"
                    android:textSize="22sp"
                    tools:ignore="RelativeOverlap" />

                <LinearLayout
                    android:id="@+id/ll_setting"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables,UselessParent">

                    <ImageView
                        android:id="@+id/iv_setting"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/setting"
                        app:tint="@color/main_title"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_local"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_common_press"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="6dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/iv_local"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/local"
                        app:tint="@color/main_title"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_local"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/local_music"
                        android:textColor="@color/main_title"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_download"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_common_press"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="6dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/iv_download"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/download"
                        app:tint="@color/main_title"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/download_music"
                        android:textColor="@color/main_title"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_record"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_common_press"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="6dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/iv_record"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/record"
                        app:tint="@color/main_title"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/record"
                        android:textColor="@color/main_title"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_live"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_common_press"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="6dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/iv_live"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/live"
                        app:tint="@color/main_title"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_live"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/live"
                        android:textColor="@color/main_title"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_common_press"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_play"
                    android:textColor="@color/main_title"
                    android:textSize="18sp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:src="@mipmap/arrow"
                    app:tint="@color/main_title"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="6dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                app:riv_corner_radius="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="6dp"
                android:text="@string/played_music"
                android:textColor="@color/main_title"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>