<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item_list"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/lrc_type"
        android:textColor="@color/main_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rl_close"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/close"
            app:tint="@color/main_title"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_close">

        <RelativeLayout
            android:id="@+id/rl_line"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="6dp"
            android:background="@color/bg_item_color"
            android:gravity="center_vertical"
            android:paddingStart="6dp"
            android:paddingEnd="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/line_highligh"
                android:textColor="@color/main_title"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_line"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:src="@mipmap/check"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <View style="@style/dividerItemStyle" />

        <RelativeLayout
            android:id="@+id/rl_word"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/bg_item_color"
            android:gravity="center_vertical"
            android:paddingStart="6dp"
            android:paddingEnd="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/word_highligh"
                android:textColor="@color/main_title"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_word"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:src="@mipmap/check"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>